# Algotrad

./: CMakeLists.txt  Doxyfile  a.out  benchmark_add.cpp  index.html  index.md  main.cpp  my__add_8hpp_source.html  my_add.cpp  test_add.cpp
.github/workflows/: doxygen.yaml  test.yaml
docs/html/: AssemblyTests_8md.html  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  _8ycm__extra__conf_8py.html  actions_8md.html  advanced_8md.html  annotated.html  args__product__test_8cc.html  args__product__test_8cc_8o_8d.html  args__product__test_8cc__incl.dot  arraysize_8h.html  arraysize_8h__dep__incl.dot  arraysize_8h__incl.dot  arraysize_8h_source.html  assertions_8md.html  basic__test_8cc.html  basic__test_8cc_8o_8d.html  basic__test_8cc__incl.dot  benchmark_8cc_8o_8d.html  benchmark_8h.html  benchmark_8h__incl.dot  benchmark_8h_source.html  benchmark__add_8cpp.html  benchmark__add_8cpp_8o_8d.html  benchmark__add_8cpp__incl.dot  benchmark__api__internal_8cc.html  benchmark__api__internal_8cc_8o_8d.html  benchmark__api__internal_8cc__incl.dot  benchmark__api__internal_8h.html  benchmark__api__internal_8h__dep__incl.dot  benchmark__api__internal_8h__incl.dot  benchmark__api__internal_8h_source.html  benchmark__gtest_8cc.html  benchmark__gtest_8cc_8o_8d.html  benchmark__gtest_8cc__incl.dot  benchmark__main_8cc.html  benchmark__main_8cc_8o_8d.html  benchmark__main_8cc__incl.dot  benchmark__min__time__flag__iters__test_8cc.html  benchmark__min__time__flag__iters__test_8cc_8o_8d.html  (+2393 more)
html/: index.html  my__add_8hpp_source.html
latex/: index.tex  refman.tex
(+1686 files in other folders)
